sample/msvc/error/c2311.cpp
// C2311.cpp
// compile with: /EHsc
//#include <eh.h>
int main() {
   try {
      throw "ooops!";
   }
   catch( ... ) {}
   catch( int ) {}   // C2311  ellipsis handler not last catch
}
